# CIFAR10

./: .gitignore  cifar10.ipynb  cifar10.py  customed_cnn.ipynb  data_explorer.ipynb  pyproject.toml  resnet_op.ipynb  result_explorer.ipynb  reuslt_explorer.ipynb  utils.py
