[project]
name = "cifar10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastai>=2.8.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "py7zr>=1.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
